--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,9 +9,25 @@
 <body>
     <div class="container">
         <h1>Hello Express</h1>
-        <img src="img/1.jpg" alt="">
-        <img src="img/2.jpg" alt="">
-        <img src="img/3.jpg" alt="">
+        <nav>
+            <a href="/">Home</a>
+            <a href="/admin">Admin</a>
+            <a href="/user">User</a>
+            <a href="/login">Login</a>
+        </nav>
+        <img src="img/1.jpg" alt="" width="100">
+        <form action="/formdata" method="GET">
+            <label>Name: <input autofocus name="username" type="text" required></label>
+            <label>Age: <input type="number" min="1" max="99" required name="age"></label>
+            <label>I Agree <input type="checkbox" name="check"></label>
+            Gender: <label>Male <input type="radio" name="gender" value="m"></label>
+             <label>Female <input type="radio" name="gender" value="f"></label>
+            <button type="submit">Submit</button>
+        </form>
+        <form action="/formdata" method="POST">
+        <input type="text" required name="name">
+        <button>Post</button>
+        </form>
     </div>  
 </body>
 </html>
